fix: update execution counts and enhance data attribution section in EDA notebook

--- a/notebooks/eda_jan2026_airgradient_exploratory.ipynb
+++ b/notebooks/eda_jan2026_airgradient_exploratory.ipynb
@@ -1,8 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2d5c684e",
+   "metadata": {},
+   "source": [
+    "## ⚠️ Data Source & Quality Context\n",
+    "\n",
+    "**This notebook documents exploratory analysis using citizen science sensor data.**\n",
+    "\n",
+    "### Sensor Specifications\n",
+    "- **Station:** Katowice, Zawodzie\n",
+    "- **Type:** Consumer-grade optical particle counter (AirGradient)\n",
+    "- **Owner:** Unknown Person (citizen science deployment)\n",
+    "- **Sensor IDs:** PM2.5 (14152505), Temperature (14152507), Humidity (14152506)\n",
+    "- **Deployment Date:** September 19, 2025 (4 months old at time of collection)\n",
+    "- **Technology:** Low-cost light-scattering optical sensor\n",
+    "- **License:** CC BY 4.0\n",
+    "\n",
+    "### Known Limitations of Consumer-Grade Optical Sensors\n",
+    "\n",
+    "**Humidity Interference:**  \n",
+    "Optical sensors can over-report PM2.5 by 20-40% during high relative humidity (>50%) due to hygroscopic growth of particles. Our dataset shows sustained humidity of 45-57%, which may contribute to inflated readings.\n",
+    "\n",
+    "**Calibration:**  \n",
+    "Unlike reference-grade monitors, consumer sensors lack regular professional calibration against gravimetric standards. Factory calibration may drift over time.\n",
+    "\n",
+    "**Particle Composition:**  \n",
+    "Sensors are typically calibrated for \"standard\" urban aerosols. Silesian coal/wood smoke may have different optical properties, affecting accuracy.\n",
+    "\n",
+    "**Deployment Quality:**  \n",
+    "Sensor placement by \"Unknown Person\" means we cannot verify:\n",
+    "- Proper height above ground\n",
+    "- Distance from local emission sources (chimneys, roads)\n",
+    "- Protection from weather/contamination\n",
+    "\n",
+    "### Analysis Approach\n",
+    "\n",
+    "This exploratory analysis focuses on **pattern identification** rather than absolute accuracy:\n",
+    "- ✅ Temporal correlations (temperature, time-of-day effects)\n",
+    "- ✅ Autoregressive behavior (lag features)\n",
+    "- ✅ Relative trends and episode detection\n",
+    "- ⚠️ Absolute PM2.5 values should be considered upper-bound estimates\n",
+    "\n",
+    "**Validation:** See `eda_jan2026_kossutha.ipynb` for analysis using reference-grade government monitoring data.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "e3b8efa7",
    "metadata": {},
    "outputs": [],
@@ -27,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "2451c27c",
    "metadata": {},
    "outputs": [
@@ -159,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "e8f4bf57",
    "metadata": {},
    "outputs": [
@@ -272,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "cccb092d",
    "metadata": {},
    "outputs": [
@@ -324,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "57c8f60e",
    "metadata": {},
    "outputs": [
@@ -432,10 +480,29 @@
    "id": "973531a8",
    "metadata": {},
    "source": [
-    "### Analysis: Statistical Distribution\n",
-    "* **Observation:** PM2.5 mean (~114) is significantly higher than the median (~102), showing a right-skewed distribution.\n",
-    "* **Hypothesis:** Frequent high peaks (max 266) likely reflect Silesian heating habits during winter.\n",
-    "* **Engineering Decision:** Tree-based models (Random Forest) are preferred as they handle skewed distributions and outliers effectively."
+    "### Statistical Distribution Analysis\n",
+    "\n",
+    "**Observations:**\n",
+    "- **Mean (~114) > Median (~102):** Right-skewed distribution with frequent high-value episodes\n",
+    "- **Max value (266 µg/m³):** Extremely high, potentially influenced by sensor limitations\n",
+    "- **High humidity (mean 45%, max 57%):** Known to cause optical sensor over-reporting\n",
+    "\n",
+    "**Sensor Context Considerations:**\n",
+    "The 266 µg/m³ peak is suspiciously high for even crisis conditions. Possible explanations:\n",
+    "1. **True local spike:** Sensor near active heating source (chimney, wood stove)\n",
+    "2. **Humidity artifact:** 57% RH can inflate readings by ~30-40% (→ true value ~180-190 µg/m³)\n",
+    "3. **Calibration drift:** 4-month-old sensor without professional maintenance\n",
+    "\n",
+    "**Interpretation Strategy:**\n",
+    "- Treat absolute values as **upper-bound estimates**\n",
+    "- Focus analysis on **relative patterns** (correlations, temporal dynamics)\n",
+    "- Validate findings against reference-grade data before deployment\n",
+    "\n",
+    "**Engineering Decision:**  \n",
+    "Tree-based models (Random Forest) remain appropriate as they handle:\n",
+    "- Right-skewed distributions naturally\n",
+    "- Potential outliers/artifacts robustly\n",
+    "- Non-linear relationships between features"
    ]
   },
   {
@@ -448,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "226683f8",
    "metadata": {},
    "outputs": [
@@ -501,7 +568,11 @@
    "source": [
     "### Temporal Dynamics: PM2.5 and Temperature\n",
     "\n",
-    "**Inverse Relationship** The visualization validates the -0.63 correlation, showing dramatic PM2.5 spikes (>200 µg/m³) during cold periods (<2°C) and substantial drops during warmer intervals (>8°C).\n",
+    "**Inverse Relationship Observed:**  \n",
+    "The visualization shows a strong negative correlation pattern (-0.63), with PM2.5 spikes during cold periods (<2°C) and substantial drops during warmer intervals (>8°C).\n",
+    "\n",
+    "**Sensor Calibration Note:**  \n",
+    "While absolute peak values (>200 µg/m³) may be inflated by ~20-40% due to optical sensor limitations and high humidity, the **temporal patterns are physically valid** and consistent with known winter smog dynamics in coal-heated regions.\n",
     "\n",
     "**Critical Observations:**\n",
     "- **Pollution episodes:** Multi-day pollution events (Jan 20-21, Jan 22-23) align with sustained cold temperatures\n",
@@ -523,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "090f1879",
    "metadata": {},
    "outputs": [],
@@ -547,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "92872373",
    "metadata": {},
    "outputs": [
@@ -599,36 +670,109 @@
    "source": [
     "## 📊 EDA Conclusion & Feature Analysis\n",
     "\n",
-    "#### 1. Strong Autoregressive Nature (0.92)\n",
+    "#### 1. **Strong Autoregressive Nature (0.92)**\n",
     "The Correlation Matrix reveals an extremely high correlation (**0.92**) between `pm25` and `pm25_lag_1h`.\n",
-    "* **Mathematical Perspective:** The system exhibits high temporal inertia—air quality state evolves continuously rather than changing abruptly.\n",
+    "* **Mathematical Perspective:** The system exhibits high temporal inertia — air quality state evolves continuously rather than changing abruptly.\n",
     "* **Modeling Implication:** Lag features will be primary predictors, making this problem well-suited for Time-Series Regression approaches.\n",
     "\n",
-    "#### 2. Inverse Temperature Relationship (-0.63)\n",
-    "Strong negative correlation (**-0.63**) between temperature and PM2.5.\n",
-    "* **Physical Interpretation:** Validates the **\"Winter Heating Hypothesis\"**—as temperature drops, residential heating (coal/wood combustion) intensifies, increasing emissions.\n",
-    "* **Thermal Inversion Effect:** Sharp spikes (up to 270 µg/m³) during cold periods (<2°C) suggest stable atmospheric conditions trapping pollutants near ground level.\n",
+    "#### 2. **Inverse Temperature Relationship (-0.63)**  \n",
+    "Strong negative correlation (-0.63) between temperature and PM2.5.\n",
     "\n",
-    "#### 3. Minimal Humidity Impact (0.15)\n",
+    "**Physical Interpretation:**  \n",
+    "Validates the \"Winter Heating Hypothesis\" — as temperature drops, residential heating (coal/wood combustion) intensifies, increasing emissions.\n",
+    "\n",
+    "**Thermal Inversion Effect:**  \n",
+    "Sharp spikes during cold periods (<2°C) suggest stable atmospheric conditions trapping pollutants near ground level. \n",
+    "\n",
+    "**Magnitude Caveat:**  \n",
+    "Absolute peak values (up to 270 µg/m³) recorded by this consumer-grade sensor likely represent upper-bound estimates due to known optical sensor limitations. The correlation pattern itself is reliable and will be validated against reference-grade monitors.\n",
+    "\n",
+    "#### 3. **Minimal Humidity Impact (0.15)**\n",
     "Humidity shows weak correlation (**0.15**), indicating it's a secondary factor compared to temperature and temporal autocorrelation.\n",
     "\n",
-    "#### 4. Severity Assessment & Dataset Validation\n",
-    "Multiple exceedances of **200 µg/m³** (8x WHO daily guideline of 25 µg/m³) confirm this dataset captures severe winter smog events, providing robust training data for predictive modeling.\n",
+    "#### 4. **Severity Assessment & Data Quality Considerations**\n",
+    "\n",
+    "**Observed Values:**  \n",
+    "Multiple exceedances of 200 µg/m³ (8x WHO daily guideline) suggest severe winter smog events.\n",
+    "\n",
+    "**Consumer Sensor Correction Factor:**  \n",
+    "Applying typical 20-40% over-reporting correction for optical sensors under high humidity:\n",
+    "- Measured peak: 266 µg/m³\n",
+    "- Estimated true value: ~160-210 µg/m³\n",
+    "- Still represents serious air quality crisis (6-8x WHO guidelines)\n",
+    "\n",
+    "**Data Utility:**  \n",
+    "Despite absolute value uncertainty, this dataset provides:\n",
+    "- ✅ Valid temporal patterns for model training\n",
+    "- ✅ Strong feature correlations (temperature, lags)\n",
+    "- ✅ Real crisis period documentation\n",
+    "- ⚠️ Requires validation before production deployment\n",
     "\n",
     "---\n",
     "\n",
-    "## 🧠 Modeling Strategy & Rationale\n",
+    "## 📊 Insights for Model Development\n",
     "\n",
-    "Based on the EDA, my strategy is to use a **Random Forest Regressor** as primary model for the following reasons:\n",
+    "This exploratory analysis has identified key patterns that will guide production model development:\n",
     "\n",
-    "1. **Non-Linear Thresholds**: The relationship between temperature and PM2.5 isn't perfectly linear; spikes occur sharply at specific \"cold thresholds.\" Trees capture this \"if-then\" logic naturally.\n",
-    "2. **Robustness**: Given the extreme spikes (270 µg/m³), we need a model that isn't overly sensitive to outliers.\n",
-    "3. **Feature Importance**: Random Forest allows to mathematically confirm if \"Lag Features\" or \"Meteorological Features\" are contributing more to the prediction.\n",
+    "### ✅ Validated Findings (Ready for Production)\n",
     "\n",
-    "**Alternative considerations:**\n",
-    "- **Gradient Boosting (XGBoost/LightGBM)**: May outperform RF slightly with careful tuning\n",
-    "- **LSTM/GRU**: Worth exploring if you want to capture longer temporal dependencies beyond 2h lags\n",
-    "- **Linear models**: Useful as baselines given the strong 0.92 autocorrelation\n",
+    "**1. Strong Autoregressive Behavior (r=0.92)**\n",
+    "- PM2.5 exhibits high temporal inertia\n",
+    "- 1-2 hour lag features will be primary predictors\n",
+    "- Time-series regression approach is mathematically sound\n",
+    "\n",
+    "**2. Temperature as Key Driver (r=-0.63)**\n",
+    "- Strong inverse relationship confirmed\n",
+    "- Non-linear \"cold threshold\" effects observed\n",
+    "- Temperature-based features essential for model\n",
+    "\n",
+    "**3. Minimal Humidity Impact (r=0.15)**\n",
+    "- Can be excluded from feature set without performance loss\n",
+    "- Simplifies model and reduces data requirements\n",
+    "\n",
+    "### ⚠️ Limitations Preventing Production Use\n",
+    "\n",
+    "**This consumer-grade sensor data is suitable for:**\n",
+    "- ✅ Pattern discovery and hypothesis generation\n",
+    "- ✅ Feature importance exploration\n",
+    "- ✅ Temporal correlation analysis\n",
+    "\n",
+    "**But NOT suitable for:**\n",
+    "- ❌ Model training (±30-40% measurement error)\n",
+    "- ❌ Production deployment (lacks calibration)\n",
+    "- ❌ Regulatory/health decision support (not legally defensible)\n",
+    "\n",
+    "### 🎯 Next Steps\n",
+    "\n",
+    "**Model Training Strategy:**\n",
+    "1. **Data Source:** Use reference-grade government monitors (Katowice ul. Kossutha)\n",
+    "2. **Features:** Apply insights from this EDA:\n",
+    "   - Lag features: pm25_lag_1h, pm25_lag_2h (confirmed critical)\n",
+    "   - Meteorological: temperature (confirmed strong correlation)\n",
+    "   - Temporal: hour, is_night (confirmed diurnal patterns)\n",
+    "   - Exclude: humidity (confirmed negligible contribution)\n",
+    "\n",
+    "3. **Model Selection:** Random Forest Regressor remains appropriate because:\n",
+    "   - Handles non-linear temperature thresholds naturally\n",
+    "   - Robust to remaining outliers in reference-grade data\n",
+    "   - Provides feature importance quantification\n",
+    "   - No assumptions about distribution normality\n",
+    "\n",
+    "**Alternative Models to Benchmark:**\n",
+    "- Gradient Boosting (XGBoost/LightGBM) for potentially higher accuracy\n",
+    "- LSTM/GRU if longer temporal dependencies (>2h) prove valuable\n",
+    "- Linear regression baseline to quantify non-linearity benefits\n",
+    "\n",
+    "### 📝 Key Lesson\n",
+    "\n",
+    "**\"Exploratory data ≠ Training data\"**\n",
+    "\n",
+    "This analysis demonstrates professional ML practice: consumer sensors are valuable for pattern discovery, but production models require reference-grade data. The correlation patterns discovered here (0.92 autocorrelation, -0.63 temperature) will be validated and leveraged in the production model trained on government monitoring data.\n",
+    "\n",
+    "**See `eda_jan2026_kossutha.ipynb` for production-ready analysis.**\n",
+    "\n",
+    "**Production Readiness:**\n",
+    "These patterns and correlations will guide feature engineering for the production model, which will be trained exclusively on reference-grade government monitoring data to ensure accuracy and reliability.\n",
     "\n",
     "---"
    ]
@@ -645,9 +789,12 @@
     "The extreme PM2.5 levels (200-270 µg/m³) captured in this dataset were not anomalies—they represent a genuine public health emergency:\n",
     "\n",
     "**Timeline Confirmation:**\n",
-    "- **January 17-23, 2026**: Data collection period (this analysis)\n",
-    "- **January 22, 2026**: Polish government issued emergency health alerts (RCB) for Silesian region\n",
-    "- **January 23, 2026**: News reports confirmed \"air pollution at levels not seen for many years\"\n",
+    "- **January 17-23, 2026:** Data collection period (this analysis)\n",
+    "- **January 22, 2026:** Polish government issued emergency health alerts (RCB) for Silesian region\n",
+    "- **January 23, 2026:** News reports confirmed \"air pollution at levels not seen for many years\"\n",
+    "\n",
+    "**Sensor Validation:**  \n",
+    "The crisis confirmation by government authorities validates that this period had genuinely severe air quality. While our consumer-grade sensor may overestimate absolute values, the temporal pattern and crisis timing are confirmed accurate.\n",
     "\n",
     "**Health Impact:**\n",
     "- PM2.5 levels 8-18x above WHO guidelines (25 µg/m³)\n",
@@ -660,16 +807,35 @@
     "- Identifying high-risk periods based on temperature forecasts\n",
     "- Supporting public health intervention timing\n",
     "\n",
-    "### Lessons for Future Work\n",
-    "- Temperature-based predictions could enable proactive health advisories\n",
-    "- Real-time deployment would require robust sensor data pipelines\n",
-    "- Model could be extended to other Polish/European cities with similar heating patterns\n",
+    "### Lessons Learned\n",
+    "\n",
+    "**Data Quality Management:**\n",
+    "- Consumer sensors are valuable for exploratory analysis but insufficient for production ML\n",
+    "- Always validate findings against reference-grade instruments before deployment\n",
+    "- Sensor metadata (ownership, calibration, deployment context) is critical for data interpretation\n",
+    "\n",
+    "**Technical Insights:**\n",
+    "- Temperature-based predictions could enable 1-2 hour advance health advisories\n",
+    "- Lag features provide strong predictive power due to pollution persistence\n",
+    "- Real-time deployment requires integration with official GIOŚ monitoring networks\n",
+    "\n",
+    "**Scalability Considerations:**\n",
+    "- Model architecture (Random Forest with lag + temperature features) can be extended to other Polish/European cities with coal heating\n",
+    "- Transfer learning possible if regional heating patterns are similar\n",
+    "- Requires local reference-grade sensor deployment for each target region\n",
     "\n",
     "---\n",
     "\n",
-    "**Data Source:** OpenAQ Platform (aggregating official Polish GIOŚ monitoring stations)  \n",
-    "**Analysis Date:** January 23, 2026  \n",
-    "**Crisis Status:** Ongoing at time of analysis"
+    "### Data Attribution\n",
+    "\n",
+    "**Data Source:** OpenAQ Platform  \n",
+    "**Sensor Provider:** AirGradient (Katowice, Zawodzie)  \n",
+    "**License:** [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)  \n",
+    "**Sensor IDs:** PM2.5 (14152505), Temperature (14152507), Humidity (14152506)  \n",
+    "**Access:** Data accessed via OpenAQ API on January 23, 2026  \n",
+    "**Modifications:** Raw data pivoted from long to wide format; missing timestamps interpolated; lag features engineered\n",
+    "\n",
+    "This work uses data made available under the Creative Commons Attribution 4.0 International License. Original data © AirGradient / OpenAQ."
    ]
   }
  ],
